# TextAtlas5M

./: .gitignore  00README.json  README.md  main.tex  pyproject.toml
textatlas_cn/: .gitignore  README.md  requirements.txt  setup.cfg
textatlas_cn/configs/: corpora.yaml  default.yaml  fonts.yaml  fonts_en.yaml  parallel_corpora.yaml  topics_styled.yaml  topics_textscenes.yaml
textatlas_cn/data/templates/: zh_caption_templates.txt
textatlas_cn/docs/: BILINGUAL.md  DESIGN.md
textatlas_cn/tests/: test_parallel.py  test_smoke.py
textatlas_cn/textatlas_cn/: __init__.py
textatlas_cn/textatlas_cn/common/: __init__.py  config.py  corpora.py  font_pairs.py  fonts.py  io.py  length_bins.py  llm.py  ocr.py  parallel_corpora.py  parallel_io.py  parallel_schema.py  quality.py  render.py  render_en.py  schema.py  t2i.py  templates.py  text_detect.py  translate.py
textatlas_cn/textatlas_cn/eval/: __init__.py  build_eval.py  build_eval_parallel.py
textatlas_cn/textatlas_cn/export/: __init__.py  pack.py  pack_parallel.py
textatlas_cn/textatlas_cn/scripts/: __init__.py  build_clean_text_synth.py  build_clean_text_synth_parallel.py  build_cover_book.py  build_cover_book_parallel.py  build_eval.py  build_eval_parallel.py  build_long_words_subset.py  build_long_words_subset_parallel.py  build_paper2text.py  build_paper2text_parallel.py  build_ppt2details.py  build_ppt2details_parallel.py  build_ppt2structured.py  build_ppt2structured_parallel.py  build_styled_text_synth.py  build_styled_text_synth_parallel.py  build_text_scenes_hq.py  build_text_scenes_hq_parallel.py  (+6 more)
(+79 files in other folders)
