[metadata]
name = textatlas_cn
version = 0.1.0
description = TextAtlas-CN: Chinese long/structured text-rich image dataset construction toolkit.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pillow>=10.0
    pyyaml>=6.0
    pydantic>=2.6
    tqdm>=4.66
    requests>=2.31
    diskcache>=5.6
    tenacity>=8.2

[options.packages.find]
exclude =
    tests*
    notebooks*
